generated/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programme
Rule 1     programme -> statement
Rule 2     programme -> statement ; programme
Rule 3     statement -> assignation
Rule 4     statement -> structure
Rule 5     statement -> PRINT expression
Rule 6     structure -> WHILE expression { programme }
Rule 7     structure -> IF expression { programme }
Rule 8     expression -> expression ADD_OP expression
Rule 9     expression -> expression MUL_OP expression
Rule 10    expression -> NUMBER
Rule 11    expression -> IDENTIFIER
Rule 12    expression -> ( expression )
Rule 13    expression -> ADD_OP expression
Rule 14    assignation -> IDENTIFIER = expression

Terminals, with rules where they appear

(                    : 12
)                    : 12
;                    : 2
=                    : 14
ADD_OP               : 8 13
IDENTIFIER           : 11 14
IF                   : 7
MUL_OP               : 9
NUMBER               : 10
PRINT                : 5
WHILE                : 6
error                : 
{                    : 6 7
}                    : 6 7

Nonterminals, with rules where they appear

assignation          : 3
expression           : 5 6 7 8 8 9 9 12 13 14
programme            : 2 6 7 0
statement            : 1 2
structure            : 4

Parsing method: LALR

state 0

    (0) S' -> . programme
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (14) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }
    (7) structure -> . IF expression { programme }

    PRINT           shift and go to state 5
    IDENTIFIER      shift and go to state 6
    WHILE           shift and go to state 7
    IF              shift and go to state 8

    programme                      shift and go to state 1
    statement                      shift and go to state 2
    assignation                    shift and go to state 3
    structure                      shift and go to state 4

state 1

    (0) S' -> programme .



state 2

    (1) programme -> statement .
    (2) programme -> statement . ; programme

    $end            reduce using rule 1 (programme -> statement .)
    }               reduce using rule 1 (programme -> statement .)
    ;               shift and go to state 9


state 3

    (3) statement -> assignation .

    ;               reduce using rule 3 (statement -> assignation .)
    $end            reduce using rule 3 (statement -> assignation .)
    }               reduce using rule 3 (statement -> assignation .)


state 4

    (4) statement -> structure .

    ;               reduce using rule 4 (statement -> structure .)
    $end            reduce using rule 4 (statement -> structure .)
    }               reduce using rule 4 (statement -> structure .)


state 5

    (5) statement -> PRINT . expression
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 13
    (               shift and go to state 14
    ADD_OP          shift and go to state 11

    expression                     shift and go to state 10

state 6

    (14) assignation -> IDENTIFIER . = expression

    =               shift and go to state 15


state 7

    (6) structure -> WHILE . expression { programme }
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 13
    (               shift and go to state 14
    ADD_OP          shift and go to state 11

    expression                     shift and go to state 16

state 8

    (7) structure -> IF . expression { programme }
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 13
    (               shift and go to state 14
    ADD_OP          shift and go to state 11

    expression                     shift and go to state 17

state 9

    (2) programme -> statement ; . programme
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (14) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }
    (7) structure -> . IF expression { programme }

    PRINT           shift and go to state 5
    IDENTIFIER      shift and go to state 6
    WHILE           shift and go to state 7
    IF              shift and go to state 8

    statement                      shift and go to state 2
    programme                      shift and go to state 18
    assignation                    shift and go to state 3
    structure                      shift and go to state 4

state 10

    (5) statement -> PRINT expression .
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ;               reduce using rule 5 (statement -> PRINT expression .)
    $end            reduce using rule 5 (statement -> PRINT expression .)
    }               reduce using rule 5 (statement -> PRINT expression .)
    ADD_OP          shift and go to state 19
    MUL_OP          shift and go to state 20


state 11

    (13) expression -> ADD_OP . expression
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 13
    (               shift and go to state 14
    ADD_OP          shift and go to state 11

    expression                     shift and go to state 21

state 12

    (10) expression -> NUMBER .

    ADD_OP          reduce using rule 10 (expression -> NUMBER .)
    MUL_OP          reduce using rule 10 (expression -> NUMBER .)
    ;               reduce using rule 10 (expression -> NUMBER .)
    $end            reduce using rule 10 (expression -> NUMBER .)
    }               reduce using rule 10 (expression -> NUMBER .)
    {               reduce using rule 10 (expression -> NUMBER .)
    )               reduce using rule 10 (expression -> NUMBER .)


state 13

    (11) expression -> IDENTIFIER .

    ADD_OP          reduce using rule 11 (expression -> IDENTIFIER .)
    MUL_OP          reduce using rule 11 (expression -> IDENTIFIER .)
    ;               reduce using rule 11 (expression -> IDENTIFIER .)
    $end            reduce using rule 11 (expression -> IDENTIFIER .)
    }               reduce using rule 11 (expression -> IDENTIFIER .)
    {               reduce using rule 11 (expression -> IDENTIFIER .)
    )               reduce using rule 11 (expression -> IDENTIFIER .)


state 14

    (12) expression -> ( . expression )
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 13
    (               shift and go to state 14
    ADD_OP          shift and go to state 11

    expression                     shift and go to state 22

state 15

    (14) assignation -> IDENTIFIER = . expression
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 13
    (               shift and go to state 14
    ADD_OP          shift and go to state 11

    expression                     shift and go to state 23

state 16

    (6) structure -> WHILE expression . { programme }
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    {               shift and go to state 24
    ADD_OP          shift and go to state 19
    MUL_OP          shift and go to state 20


state 17

    (7) structure -> IF expression . { programme }
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    {               shift and go to state 25
    ADD_OP          shift and go to state 19
    MUL_OP          shift and go to state 20


state 18

    (2) programme -> statement ; programme .

    $end            reduce using rule 2 (programme -> statement ; programme .)
    }               reduce using rule 2 (programme -> statement ; programme .)


state 19

    (8) expression -> expression ADD_OP . expression
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 13
    (               shift and go to state 14
    ADD_OP          shift and go to state 11

    expression                     shift and go to state 26

state 20

    (9) expression -> expression MUL_OP . expression
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 13
    (               shift and go to state 14
    ADD_OP          shift and go to state 11

    expression                     shift and go to state 27

state 21

    (13) expression -> ADD_OP expression .
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 13 (expression -> ADD_OP expression .)
    MUL_OP          reduce using rule 13 (expression -> ADD_OP expression .)
    ;               reduce using rule 13 (expression -> ADD_OP expression .)
    $end            reduce using rule 13 (expression -> ADD_OP expression .)
    }               reduce using rule 13 (expression -> ADD_OP expression .)
    {               reduce using rule 13 (expression -> ADD_OP expression .)
    )               reduce using rule 13 (expression -> ADD_OP expression .)

  ! ADD_OP          [ shift and go to state 19 ]
  ! MUL_OP          [ shift and go to state 20 ]


state 22

    (12) expression -> ( expression . )
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    )               shift and go to state 28
    ADD_OP          shift and go to state 19
    MUL_OP          shift and go to state 20


state 23

    (14) assignation -> IDENTIFIER = expression .
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ;               reduce using rule 14 (assignation -> IDENTIFIER = expression .)
    $end            reduce using rule 14 (assignation -> IDENTIFIER = expression .)
    }               reduce using rule 14 (assignation -> IDENTIFIER = expression .)
    ADD_OP          shift and go to state 19
    MUL_OP          shift and go to state 20


state 24

    (6) structure -> WHILE expression { . programme }
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (14) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }
    (7) structure -> . IF expression { programme }

    PRINT           shift and go to state 5
    IDENTIFIER      shift and go to state 6
    WHILE           shift and go to state 7
    IF              shift and go to state 8

    programme                      shift and go to state 29
    statement                      shift and go to state 2
    assignation                    shift and go to state 3
    structure                      shift and go to state 4

state 25

    (7) structure -> IF expression { . programme }
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (14) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }
    (7) structure -> . IF expression { programme }

    PRINT           shift and go to state 5
    IDENTIFIER      shift and go to state 6
    WHILE           shift and go to state 7
    IF              shift and go to state 8

    programme                      shift and go to state 30
    statement                      shift and go to state 2
    assignation                    shift and go to state 3
    structure                      shift and go to state 4

state 26

    (8) expression -> expression ADD_OP expression .
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 8 (expression -> expression ADD_OP expression .)
    ;               reduce using rule 8 (expression -> expression ADD_OP expression .)
    $end            reduce using rule 8 (expression -> expression ADD_OP expression .)
    }               reduce using rule 8 (expression -> expression ADD_OP expression .)
    {               reduce using rule 8 (expression -> expression ADD_OP expression .)
    )               reduce using rule 8 (expression -> expression ADD_OP expression .)
    MUL_OP          shift and go to state 20

  ! MUL_OP          [ reduce using rule 8 (expression -> expression ADD_OP expression .) ]
  ! ADD_OP          [ shift and go to state 19 ]


state 27

    (9) expression -> expression MUL_OP expression .
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 9 (expression -> expression MUL_OP expression .)
    MUL_OP          reduce using rule 9 (expression -> expression MUL_OP expression .)
    ;               reduce using rule 9 (expression -> expression MUL_OP expression .)
    $end            reduce using rule 9 (expression -> expression MUL_OP expression .)
    }               reduce using rule 9 (expression -> expression MUL_OP expression .)
    {               reduce using rule 9 (expression -> expression MUL_OP expression .)
    )               reduce using rule 9 (expression -> expression MUL_OP expression .)

  ! ADD_OP          [ shift and go to state 19 ]
  ! MUL_OP          [ shift and go to state 20 ]


state 28

    (12) expression -> ( expression ) .

    ADD_OP          reduce using rule 12 (expression -> ( expression ) .)
    MUL_OP          reduce using rule 12 (expression -> ( expression ) .)
    ;               reduce using rule 12 (expression -> ( expression ) .)
    $end            reduce using rule 12 (expression -> ( expression ) .)
    }               reduce using rule 12 (expression -> ( expression ) .)
    {               reduce using rule 12 (expression -> ( expression ) .)
    )               reduce using rule 12 (expression -> ( expression ) .)


state 29

    (6) structure -> WHILE expression { programme . }

    }               shift and go to state 31


state 30

    (7) structure -> IF expression { programme . }

    }               shift and go to state 32


state 31

    (6) structure -> WHILE expression { programme } .

    ;               reduce using rule 6 (structure -> WHILE expression { programme } .)
    $end            reduce using rule 6 (structure -> WHILE expression { programme } .)
    }               reduce using rule 6 (structure -> WHILE expression { programme } .)


state 32

    (7) structure -> IF expression { programme } .

    ;               reduce using rule 7 (structure -> IF expression { programme } .)
    $end            reduce using rule 7 (structure -> IF expression { programme } .)
    }               reduce using rule 7 (structure -> IF expression { programme } .)

